# agentflow-goose

./: Cargo.toml  Justfile  download_cli.sh
.github/workflows/: build-cli.yml  bundle-desktop-intel.yml  bundle-desktop-linux.yml  bundle-desktop.yml  ci.yml  desktop-ci.yml  pr-smoke-test.yml
crates/goose/: Cargo.toml  acp-meta.json  acp-schema.json  config.schema.json
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs  tui.rs
crates/goose-sdk/: README.md
crates/goose-sdk/src/: custom_requests.rs
crates/goose-server/: Cargo.toml
crates/goose-server/src/: openapi.rs
crates/goose/src/: download_manager.rs  sources.rs
evals/harbor/: README.md  agent.py  cmd.py  config_template.yaml  report.py  reporter.py  runner.py
recipes/devices/: README.md  c1-watcher-alerter.yaml  c2-morning-digest.yaml  c3-leadgen-outreach.yaml  c4-data-pipeline.yaml  c5-content-factory.yaml  c6-concierge.yaml  l1-inbox-triage.yaml  l2-freelance-autopilot.yaml  l3-file-butler.yaml  l4-research-brief.yaml  l5-repo-chores.yaml  l6-social-crosspost.yaml  manifest.json
ui/: pnpm-lock.yaml  pnpm-workspace.yaml
ui/desktop/: eslint.config.js  forge.config.ts  forge.rpm.desktop  index.html  openapi.json  package.json
ui/goose2/: justfile  package.json
ui/goose3/: AGENTS.md  README.md  justfile  package.json
ui/goose3/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
ui/goose3/src-tauri/capabilities/: default.json
ui/goose3/src-tauri/src/: lib.rs  main.rs
ui/goose3/src-tauri/src/services/acp/: goose_serve.rs
ui/sdk/: package.json
ui/text/: package.json
(+525 files in other folders)
