[package]
name = "goose3"
version = "0.1.0"
description = "Goose desktop app (ACP-only)"
authors = ["you"]
edition = "2021"

[[bin]]
name = "goose-tauri"
path = "src/main.rs"

[lib]
name = "goose3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
log = "0.4.29"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
